--- a/RecipientApp/recipient_app/pubspec.yaml
+++ b/RecipientApp/recipient_app/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   nfc_manager: ^3.2.0
+  flutter_nfc_kit: ^3.3.1
 
 dev_dependencies:
   flutter_test:
