--- a/ClientApp/android/app/src/main/AndroidManifest.xml
+++ b/ClientApp/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.b2_bus_transporation">
+    <uses-permission android:name="android.permission.NFC" />
+
    <application
         android:label="b2_bus_transporation"
         android:name="${applicationName}"
