--- a/ClientApp/pubspec.yaml
+++ b/ClientApp/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   nfc_manager: ^3.2.0
   flutter_nfc_kit: ^3.3.1
+  google_sign_in: ^5.4.2
 
 dev_dependencies:
   flutter_test:
