--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,4 @@ app.*.map.json
 /*/window/flutter
 */android/.gradle
 ClientApp/android/.gradle/*
+ClientApp/android/.gradle/7.4.2/executionHistory/executionHistory.bin
