--- a/ClientApp/android/local.properties
+++ b/ClientApp/android/local.properties
@@ -1,5 +1,5 @@
-sdk.dir=/home/ronin/Android/Sdk
-flutter.sdk=/home/ronin/snap/flutter/common/flutter
+sdk.dir=C:\\Users\\mrred\\AppData\\Local\\Android\\sdk
+flutter.sdk=C:\\src\\flutter
 flutter.buildMode=debug
 flutter.versionName=1.0.0
 flutter.versionCode=1
