--- a/ClientApp/pubspec.yaml
+++ b/ClientApp/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   nfc_manager: ^3.2.0
   flutter_nfc_kit: ^3.3.1
   google_sign_in: ^6.0.2
+  nfc_in_flutter: ^2.0.5
+  ndef: ^0.3.1
 
 dev_dependencies:
   flutter_test:
